* Script.fsx: * Test.fs: * Component1.fs: * packages.config: * MarkdownText.fs: * ASTTest.fs: * MarkdownNode.fs: * DOMTest.fs: * MarkdownBlock.fs: * HtmlToMarkdown.fs: * MarkdownParagraph.fs: * MarkdownContainer.fs: * ConversionTest.fs: * MarkdownForWhat.fsproj: * MarkdownForWhat.Test.fsproj:
* HtmlToMarkdownParser.fs: created a parser to generate a DOM for the
  markdown content

--- a/MarkdownForWhat.Test/MarkdownForWhat.Test.fsproj
+++ b/MarkdownForWhat.Test/MarkdownForWhat.Test.fsproj
@@ -39,7 +39,8 @@
     <Reference Include="nunit.framework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.fs" />
+    <Compile Include="ConversionTest.fs" />
+    <Compile Include="DOMTest.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
