--- a/MarkdownForWhat/MarkdownForWhat.fsproj
+++ b/MarkdownForWhat/MarkdownForWhat.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -7,6 +7,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>MarkdownForWhat</RootNamespace>
     <AssemblyName>MarkdownForWhat</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,11 +45,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Component1.fs" />
     <Compile Include="Script.fsx" />
+    <Compile Include="MarkdownNode.fs" />
+    <Compile Include="MarkdownContainer.fs" />
+    <Compile Include="MarkdownBlock.fs" />
+    <Compile Include="MarkdownParagraph.fs" />
+    <Compile Include="MarkdownText.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
+    <Compile Include="HtmlToMarkdownParser.fs" />
+    <Compile Include="HtmlToMarkdown.fs" />
     <None Include="packages.config" />
   </ItemGroup>
 </Project>
