* MarkdownText.fs, MarkdownNode.fs, DOMTest.fs, MarkdownBlock.fs,   MarkdownParagraph.fs, MarkdownContainer.fs, MarkdownNode.fs,   MarkdownForWhat.fsproj, MarkdownBlock.fs, HtmlToMarkdownParser.fs,   MarkdownParagraph.fs, MarkdownContainer.fs:
* MarkdownForWhat.sln: Moved DOM classes into the Model folder.
Most common use-cases will be to convert html to markdown or markdown
  to html (eventually), so the user should never have to open the
  Model namespace in the common cases, so no need to muddy the base
  namespace with these classes.

--- a/MarkdownForWhat/MarkdownForWhat.fsproj
+++ b/MarkdownForWhat/MarkdownForWhat.fsproj
@@ -46,16 +46,19 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Script.fsx" />
-    <Compile Include="MarkdownNode.fs" />
-    <Compile Include="MarkdownContainer.fs" />
-    <Compile Include="MarkdownBlock.fs" />
-    <Compile Include="MarkdownParagraph.fs" />
-    <Compile Include="MarkdownText.fs" />
+    <Compile Include="Model\MarkdownNode.fs" />
+    <Compile Include="Model\MarkdownContainer.fs" />
+    <Compile Include="Model\MarkdownBlock.fs" />
+    <Compile Include="Model\MarkdownParagraph.fs" />
+    <Compile Include="Model\MarkdownText.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
     <Compile Include="HtmlToMarkdownParser.fs" />
     <Compile Include="HtmlToMarkdown.fs" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
 </Project>
