Parser now supports strong
* MarkdownSpan.fs, MarkdownStrong.fs: 

* DOMTest.fs: test for strong node parsing

* HtmlToMarkdownParser.fs: element handling for strong

* MarkdownForWhat.fsproj: added span and strong

--- a/MarkdownForWhat/MarkdownForWhat.fsproj
+++ b/MarkdownForWhat/MarkdownForWhat.fsproj
@@ -50,6 +50,8 @@
     <Compile Include="Model\MarkdownBlock.fs" />
     <Compile Include="Model\MarkdownParagraph.fs" />
     <Compile Include="Model\MarkdownText.fs" />
+    <Compile Include="Model\MarkdownSpan.fs" />
+    <Compile Include="Model\MarkdownStrong.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
