Added unknown html block fallback.
This avoids errors when unknown or malformed elements are encountered

--- a/MarkdownForWhat/MarkdownForWhat.fsproj
+++ b/MarkdownForWhat/MarkdownForWhat.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="Model\MarkdownText.fs" />
     <Compile Include="Model\MarkdownSpan.fs" />
     <Compile Include="Model\MarkdownStrong.fs" />
+    <Compile Include="Model\MarkdownHtml.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
