--- a/MarkdownForWhat/MarkdownForWhat.fsproj
+++ b/MarkdownForWhat/MarkdownForWhat.fsproj
@@ -47,12 +47,13 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Model\MarkdownNode.fs" />
     <Compile Include="Model\MarkdownContainer.fs" />
-    <Compile Include="Model\MarkdownBlock.fs" />
-    <Compile Include="Model\MarkdownParagraph.fs" />
-    <Compile Include="Model\MarkdownText.fs" />
-    <Compile Include="Model\MarkdownSpan.fs" />
-    <Compile Include="Model\MarkdownStrong.fs" />
     <Compile Include="Model\MarkdownHtml.fs" />
+    <Compile Include="Model\Blocks\MarkdownBlock.fs" />
+    <Compile Include="Model\Blocks\MarkdownParagraph.fs" />
+    <Compile Include="Model\Inlines\MarkdownSpan.fs" />
+    <Compile Include="Model\Inlines\MarkdownStrong.fs" />
+    <Compile Include="Model\Inlines\MarkdownText.fs" />
+    <Compile Include="Model\Inlines\MarkdownLink.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
@@ -61,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
+    <Folder Include="Model\Blocks\" />
+    <Folder Include="Model\Inlines\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Script.fsx" />
